--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -56,7 +56,7 @@
 }
 
 %header--btn {
-  -webkit-tap-highlight-color: $black;
+  // -webkit-tap-highlight-color: $black;
   -webkit-touch-callout: none;
   user-select: none;
   border: 1px solid $white;
@@ -66,6 +66,7 @@
   transition-property: border, background, color, width;
   transition-duration: 0.1s;
   transition-timing-function: ease-in;
+  padding: 0.25em 0.66em;
 
   &:hover {
     color: $orange;
